<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.example.admin.fdm.ui.activity.AboutActivity">

    <include layout="@layout/action_bar" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp10"
        android:layout_marginTop="@dimen/dp30"
        android:src="@drawable/about_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@color/green"
        android:textSize="@dimen/sp20" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp50"
        android:gravity="center"
        android:text="@string/version"
        android:textColor="@color/black"
        android:textSize="@dimen/sp16" />

    <RelativeLayout
        android:id="@+id/Zhage_introduce"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp37"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/dp18"
            android:text="@string/company_introduction"
            android:textSize="@dimen/sp16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp18"
            android:src="@drawable/right_about" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/dp18"
        android:layout_marginRight="@dimen/dp18"
        android:background="@color/divider_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp37"
        android:layout_marginTop="@dimen/dp20"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/dp18"
            android:text="@string/zhage_website"
            android:textSize="@dimen/sp16" />

        <TextView
            android:id="@+id/Zhage_websit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp18"
            android:text="@string/weixin_web"
            android:textSize="@dimen/sp16" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/dp18"
        android:layout_marginRight="@dimen/dp18"
        android:background="@color/divider_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp37"
        android:layout_marginTop="@dimen/dp20"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/dp18"
            android:text="@string/zhage_weixin"
            android:textSize="@dimen/sp16" />

        <TextView
            android:id="@+id/tv_weixin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp18"
            android:text="@string/weixin_name"
            android:textSize="@dimen/sp16" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/dp18"
        android:layout_marginRight="@dimen/dp18"
        android:background="@color/divider_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp37"
        android:layout_marginTop="@dimen/dp20"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/dp18"
            android:text="@string/customer_service"
            android:textSize="@dimen/sp16" />

        <TextView
            android:id="@+id/Zhage_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp18"
            android:text="@string/zhage_phone"
            android:textSize="@dimen/sp16" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/dp18"
        android:layout_marginRight="@dimen/dp18"
        android:background="@color/divider_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp37"
        android:layout_marginTop="@dimen/dp20"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/dp18"
            android:text="@string/hotline"
            android:textSize="@dimen/sp16" />

        <TextView
            android:id="@+id/Hotline_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp18"
            android:text="@string/hotline_phone"
            android:textSize="@dimen/sp16" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/dp18"
        android:layout_marginRight="@dimen/dp18"
        android:background="@color/divider_color" />
</LinearLayout>
