<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_margin="@dimen/dp10"
    android:background="@drawable/green_ellipse"
    android:id="@+id/ll_room"
    android:orientation="vertical">


    <CheckBox
        android:id="@+id/select_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp5"
        android:layout_marginTop="@dimen/dp5"
        android:button="@drawable/checkbox_style"
       />

    <TextView
        android:id="@+id/tv_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp9"
        android:gravity="center_horizontal"
        android:text=""
        android:textColor="@color/toolbartitle"
        android:textSize="@dimen/sp10" />

    <TextView
        android:id="@+id/tv_room_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="101"
        android:textColor="@color/text_green"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        android:gravity="center_horizontal"
        android:text="@string/rent"
        android:textColor="@color/toolbartitle"
        android:textSize="@dimen/sp12" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp4"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_rental"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="2000"
            android:textColor="@color/toolbartitle"
            android:textSize="@dimen/sp14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/company"
            android:textColor="@color/toolbartitle"
            android:textSize="@dimen/sp14" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp17"
        android:gravity="center_horizontal"
        android:text="@string/deposit"
        android:textColor="@color/toolbartitle"
        android:textSize="@dimen/sp12" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp4"
        android:layout_marginBottom="@dimen/dp10"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_deposit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="2000"
            android:textColor="@color/toolbartitle"
            android:textSize="@dimen/sp14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="元/月"
            android:textColor="@color/toolbartitle"
            android:textSize="@dimen/sp14" />
    </LinearLayout>

</LinearLayout>