<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="12dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_house"
        android:layout_width="100dp"
        android:layout_height="76dp"
        android:src="@drawable/house_sit"
        android:layout_marginRight="10dp" />

    <TextView
        android:id="@+id/tv_house_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/iv_house"
        android:singleLine="true"
        android:text="朝阳区魔方公寓000000000000000000000000000000000000000"
        android:textColor="#2a2e32"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_house_info"
        style="@style/gray_text_12sp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_house_name"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/iv_house"
        android:text="1室1厅1卫-30.0m²" />

    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/tv_house_location"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_house_info"
        android:layout_toRightOf="@id/iv_house"
        android:text=" 北京市朝阳区塔链坡"
        android:textColor="@color/gray666"
        android:textSize="11sp"
        android:drawableLeft="@drawable/location"/>
    
    <LinearLayout
        android:id="@+id/ll_label"
        android:layout_marginTop="5dp"
        android:layout_below="@id/tv_house_location"
        android:layout_toRightOf="@id/iv_house"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:visibility="gone"
            android:padding="3dp"
            android:text="@string/three_check_out"
            android:textColor="@color/price_red"
            android:background="@drawable/house_tag_red"
            android:textSize="9dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:visibility="gone"
            android:padding="3dp"
            android:textSize="9dp"
            android:background="@drawable/house_tag_green"
            android:textColor="@color/price_green"
            android:text="@string/free"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:visibility="gone"
            android:padding="3dp"
            android:textSize="9dp"
            android:text="@string/solo"
            android:textColor="@color/price_blue"
            android:background="@drawable/house_tag_blue"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <TextView
        android:id="@+id/tv_house_rent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_house_info"
        android:layout_toLeftOf="@+id/yuen"
        android:text="2000"
        android:textColor="@color/price_red"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/yuen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_house_info"
        android:layout_alignBottom="@+id/tv_house_info"
        android:layout_alignParentEnd="true"
        android:text="元/月"
        android:textColor="@color/price_red"
        android:textSize="12sp" />

</RelativeLayout>